[project]
name = "Ladder_201031"
version = "0.1.0"
description = ""
authors = [
    {name = "qkrtnqls1216", email = "qkrtnqls991216@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]
